# hw2

./: .travis.yml  CMakeLists.txt  README.md  ffw.py
include/: input.h  sequence.h
scr/: input.c  main.c  paral_sequence.c  static_sequence.c
tests/: 1.txt  file_number_2.txt  test_input.cpp  test_stat_dim_lib.cpp
tests/data_test/: test_file.txt
